Fixed Modules Overflowing Out Of Container Div

--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -177,9 +177,9 @@ a.navbar-item.is-active,
   margin-left: 16%;
   margin-right: 0px;
   background-color: #0b0715;
-  width: 100%;
+
   min-width: fit-content;
-  height: 100%;
+  height: 110%;
   padding: 12px;
   border-top-left-radius: 60px;
   border-bottom-left-radius: 30px;
